# fcs-levy-may2025

./: .gitignore  README.md  notebook.py  pyproject.toml  run_notebook.sh
.github/workflows/: deploy.yml
src/fcs_may25/: __init__.py  config.py  data_loader.py  decision_tree.py  decision_tree_.py  main.py  monte_carlo.py  notebook.py  prediction.py  protocols.py
src/fcs_may25/.cursor/rules/: use-uv.mdc
src/fcs_may25/__marimo__/: notebook.html
src/fcs_may25/data/: NOV24-FCS-TAX.csv  NOV24-FCS-TAX.numbers
src/fcs_may25/data/may25_predictions/: findlay_results_may6.csv  findlay_results_may6_by_ward.csv  linear_model_may_voters_by_age.csv  linear_model_may_voters_by_precinct.csv  linear_model_may_voters_by_ward.csv  linear_model_november_voters_by_age.csv  linear_model_november_voters_by_precinct.csv  linear_model_november_voters_by_ward.csv  may_precinct_by_age.csv  may_voters_by_age.csv  may_voters_by_precinct.csv  may_voters_by_ward.csv  november_voters_by_age.csv  november_voters_by_precinct.csv  november_voters_by_ward.csv  predicted_results_to_date.csv
src/fcs_may25/data/may26_ev/: In Office Absentee List - 2025.04.09.csv  In Office Absentee List - 2025.04.10.csv  In Office Absentee List - 2025.04.11.csv  In Office Absentee List - 2025.04.14.csv  In Office Absentee List - 2025.04.15.csv  In Office Absentee List - 2025.04.17.csv  In Office Absentee List - 2025.04.21.csv  In Office Absentee List - 2025.04.22.csv  In Office Absentee List - 2025.04.23.csv  In Office Absentee List - 2025.04.24.csv  (+17 more)
src/fcs_may25/notebook/: index.html
